src/test/data/highlighting/noarg_instructions.tz
parameter string;
storage string;
code {
    # all invalid in this block
    <error descr="DROP doesn't support arguments">DROP</error> "invalid arg";
    <error descr="ABS doesn't support arguments">ABS</error> "invalid arg" 123;
    <error descr="ADD doesn't support arguments">ADD</error> "invalid arg" 123;
    <error descr="AMOUNT doesn't support arguments">AMOUNT</error> "invalid arg" 123;
    <error descr="AND doesn't support arguments">AND</error> "invalid arg" 123;
    <error descr="BALANCE doesn't support arguments">BALANCE</error> "invalid arg" 123;
    <error descr="BLAKE2B doesn't support arguments">BLAKE2B</error> "invalid arg" 123;
    <error descr="CAST doesn't support arguments">CAST</error> "invalid arg" 123 ;
    <error descr="CHECK_SIGNATURE doesn't support arguments">CHECK_SIGNATURE</error> "invalid arg" 123;
    <error descr="COMPARE doesn't support arguments">COMPARE</error> "invalid arg" 123;
    <error descr="CONCAT doesn't support arguments">CONCAT</error> "invalid arg" 123;
    <error descr="CONS doesn't support arguments">CONS</error> "invalid arg" 123 ;
    <error descr="DIV doesn't support arguments">DIV</error> "invalid arg" 123;
    <error descr="DROP doesn't support arguments">DROP</error> "invalid arg" 123 ;
    <error descr="DUP doesn't support arguments">DUP</error> "invalid arg" 123;
    <error descr="EQ doesn't support arguments">EQ</error> "invalid arg" 123;
    <error descr="EXEC doesn't support arguments">EXEC</error> "invalid arg" 123 ;
    <error descr="FAILWITH doesn't support arguments">FAILWITH</error> "invalid arg" 123;
    <error descr="GE doesn't support arguments">GE</error> "invalid arg" 123;
    <error descr="GET doesn't support arguments">GET</error> "invalid arg" 123;
    <error descr="GT doesn't support arguments">GT</error> "invalid arg" 123;
    <error descr="HASH_KEY doesn't support arguments">HASH_KEY</error> "invalid arg" 123;
    <error descr="IMPLICIT_ACCOUNT doesn't support arguments">IMPLICIT_ACCOUNT</error> "invalid arg" 123;
    <error descr="INT doesn't support arguments">INT</error> "invalid arg" 123;
    <error descr="LE doesn't support arguments">LE</error> "invalid arg" 123;
    <error descr="LSL doesn't support arguments">LSL</error> "invalid arg" 123;
    <error descr="LSR doesn't support arguments">LSR</error> "invalid arg" 123;
    <error descr="LT doesn't support arguments">LT</error> "invalid arg" 123;
    <error descr="MEM doesn't support arguments">MEM</error> "invalid arg" 123;
    <error descr="MOD doesn't support arguments">MOD</error> "invalid arg" 123;
    <error descr="MUL doesn't support arguments">MUL</error> "invalid arg" 123;
    <error descr="NEG doesn't support arguments">NEG</error> "invalid arg" 123;
    <error descr="NEQ doesn't support arguments">NEQ</error> "invalid arg" 123;
    <error descr="NOT doesn't support arguments">NOT</error> "invalid arg" 123;
    <error descr="NOW doesn't support arguments">NOW</error> "invalid arg" 123;
    <error descr="OR doesn't support arguments">OR</error> "invalid arg" 123;
    <error descr="RENAME doesn't support arguments">RENAME</error> "invalid arg" 123;
    <error descr="SELF doesn't support arguments">SELF</error> "invalid arg" 123 ;
    <error descr="SENDER doesn't support arguments">SENDER</error> "invalid arg" 123;
    <error descr="SET_DELEGATE doesn't support arguments">SET_DELEGATE</error> "invalid arg" 123;
    <error descr="SOME doesn't support arguments">SOME</error> "invalid arg" 123 ;
    <error descr="SOURCE doesn't support arguments">SOURCE</error> "invalid arg" 123;
    <error descr="STEPS_TO_QUOTA doesn't support arguments">STEPS_TO_QUOTA</error> "invalid arg" 123;
    <error descr="SUB doesn't support arguments">SUB</error> "invalid arg" 123;
    <error descr="SWAP doesn't support arguments">SWAP</error> "invalid arg" 123 ;
    <error descr="TRANSFER_TOKENS doesn't support arguments">TRANSFER_TOKENS</error> "invalid arg" 123;
    <error descr="UNIT doesn't support arguments">UNIT</error> "invalid arg" 123 ;
    <error descr="UPDATE doesn't support arguments">UPDATE</error> "invalid arg" 123;
    <error descr="XOR doesn't support arguments">XOR</error> "invalid arg" 123;

    # all valid after this point
    ABS;
    ADD;
    AMOUNT;
    AND;
    BALANCE;
    BLAKE2B;
    CAR;
    CAST;
    CDR;
    CHECK_SIGNATURE;
    COMPARE;
    CONCAT;
    CONS;
    CREATE_ACCOUNT;
    CREATE_CONTRACT ;
    CREATE_CONTRACT { parameter unit; storage unit; code {} };
    DIV;
    DROP;
    DUP;
    EQ;
    EXEC;
    FAILWITH;
    GE;
    GET;
    GT;
    HASH_KEY;
    IMPLICIT_ACCOUNT;
    INT;
    LE;
    LSL;
    LSR;
    LT;
    MEM;
    MOD;
    MUL;
    NEG;
    NEQ;
    NOT;
    NOW;
    OR;
    PAIR ;
    RENAME;
    SELF ;
    SENDER;
    SET_DELEGATE;
    SOME ;
    SOURCE;
    STEPS_TO_QUOTA;
    SUB;
    SWAP ;
    TRANSFER_TOKENS;
    UNIT ;
    UPDATE;
    XOR;
};
